--- a/basketballcamp.html
+++ b/basketballcamp.html
@@ -575,7 +575,7 @@
             // Replace 'YOUR_WEB_APP_URL_HERE' with your actual Google Apps Script URL
             const webAppUrl = 'https://script.google.com/macros/s/AKfycbynpI4aZec2z6o0u3dC920dDxLorx88ZugV5FVkRplASGhRsfHer6sJAYPvprOE6AUbQQ/exec';
             
-            if (webAppUrl === 'https://script.google.com/macros/s/AKfycbynpI4aZec2z6o0u3dC920dDxLorx88ZugV5FVkRplASGhRsfHer6sJAYPvprOE6AUbQQ/exec') {
+            if (webAppUrl === 'ok') {
                 // For testing without Google Apps Script
                 console.log('Form data:', data);
                 alert('Registration submitted successfully! (Test mode - replace with your Google Apps Script URL)');
