--- a/basketballcamp.html
+++ b/basketballcamp.html
@@ -580,7 +580,7 @@
             };
             
             // Replace 'YOUR_WEB_APP_URL_HERE' with your actual Google Apps Script URL
-            const webAppUrl = 'YOUR_WEB_APP_URL_HERE';
+            const webAppUrl = 'https://script.google.com/macros/s/AKfycbynpI4aZec2z6o0u3dC920dDxLorx88ZugV5FVkRplASGhRsfHer6sJAYPvprOE6AUbQQ/exec';
             
             if (webAppUrl === 'YOUR_WEB_APP_URL_HERE') {
                 // For testing without Google Apps Script
