--- a/basketballcamp.html
+++ b/basketballcamp.html
@@ -301,7 +301,7 @@
             <div class="logo-container">
                 <div class="logo">
                     <!-- Replace this with your actual logo -->
-                    <img src="your-logo-here.png" alt="Sharp Shooter Basketball Logo" style="width: 100%; height: 100%; object-fit: contain; border-radius: 50%;" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+                    <img src="logo.jpeg" alt="Sharp Shooter Basketball Logo" style="width: 100%; height: 100%; object-fit: contain; border-radius: 50%;" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
                     <div style="display: none; color: white; font-size: 18px;">🏀 LOGO</div>
                 </div>
             </div>
@@ -451,11 +451,11 @@
                 </button>
                 
                 <!-- Debug Info (remove in production) -->
-                <div style="margin-top: 20px; padding: 15px; background: #f8f9fa; border-radius: 8px; font-family: monospace; font-size: 12px;">
+                <!--<div style="margin-top: 20px; padding: 15px; background: #f8f9fa; border-radius: 8px; font-family: monospace; font-size: 12px;">
                     <strong>Debug Info:</strong><br>
                     Status: <span id="debugStatus">Ready for testing</span><br>
                     <button type="button" onclick="testFormData()" style="margin-top: 10px; padding: 5px 10px; background: #007bff; color: white; border: none; border-radius: 4px; cursor: pointer;">Test Form Data Collection</button>
-                </div>
+                </div>-->
             </form>
         </div>
     </div>
